--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 .Wrap {
   overflow-x: hidden;
 }
+
+/* header */
 #header {
   line-height: 100px;
   border-bottom: 1px solid #ddd;
@@ -43,6 +45,8 @@
   background: #fff;
   color: #000;
 }
+/* header */
+/* main */
 main {
   height: calc(100vh - 101px);
   background-color: rgba(0, 102, 178, 0.3);
@@ -55,25 +59,74 @@ main .inner {
   width: 1800px;
   margin: 0 auto;
 }
+/* left_box */
 main .inner .left_box {
-  width: 70%;
+  width: 75%;
 }
 main .inner .left_box .top_menu img {
-  width: 700px;
+  width: 800px;
   height: auto;
   border-radius: 1rem 1rem 0 0;
 }
 main .inner .left_box .in_left_box .mid_menu {
-  width: 700px;
+  width: 750px;
+  margin-left: 30px;
+  overflow: hidden;
 }
-main .inner .left_box .in_left_box .mid_menu .menu_slick div {
-  height: 200px;
-  margin: 10px;
+main .inner .left_box .in_left_box .mid_menu .menu_slick .sl_box {
+  background: #ddd;
+  border-radius: 1rem;
+  height: 240px;
 }
+main .inner .left_box .in_left_box .mid_menu .menu_slick div .slick_inner_box {
+  background: #fff;
+  height: 190px;
+  border-radius: 1rem;
+}
+
 main .inner .left_box .in_left_box .mid_menu .menu_slick img {
   width: 100%;
   height: 100%;
 }
+main .inner .left_box .in_left_box .mid_menu .menu_slick {
+  position: relative;
+}
+main .inner .left_box .in_left_box .mid_menu .menu_slick .sl_box {
+  padding: 15px 20px;
+  margin: 25px 25px;
+}
+main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-list {
+  padding: -20px -10px;
+}
+main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-arrow {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 30px;
+  height: 30px;
+}
+main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-prev {
+  margin: 0 0 0 -380px;
+  z-index: 800;
+
+  font-size: 0;
+
+  background: url(../img/arrw-pre-b.png) no-repeat center;
+  border: none;
+}
+main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-next {
+  margin: 0 0 0 337px;
+  z-index: 800;
+  font-size: 0;
+
+  background: url(../img/arrw-nxt-b.png) no-repeat center;
+  border: none;
+}
+
+/* left_box */
+/* right_box */
 main .inner .right_box {
   width: 100%;
 }
@@ -125,3 +178,5 @@ main .inner .in_right_box {
   border-radius: 1rem;
   padding: 20px;
 }
+/* right_box */
+/* main */
