--- a/css/main.css
+++ b/css/main.css
@@ -68,19 +68,40 @@ main .inner .left_box .top_menu img {
   height: auto;
   border-radius: 1rem 1rem 0 0;
 }
+main .inner .left_box .in_left_box {
+  position: relative;
+}
+main .inner .left_box .in_left_box #prev {
+  position: absolute;
+  top: 60%;
+  left: 20px;
+  z-index: 999;
+  border: none;
+  background: inherit;
+}
+main .inner .left_box .in_left_box #next {
+  position: absolute;
+  top: 60%;
+  right: 20px;
+  z-index: 999;
+  border: none;
+  background: inherit;
+}
 main .inner .left_box .in_left_box .mid_menu {
   width: 750px;
   margin-left: 30px;
   overflow: hidden;
+  position: relative;
 }
+
 main .inner .left_box .in_left_box .mid_menu .menu_slick .sl_box {
   background: #ddd;
   border-radius: 1rem;
-  height: 240px;
+  height: 230px;
 }
 main .inner .left_box .in_left_box .mid_menu .menu_slick div .slick_inner_box {
   background: #fff;
-  height: 190px;
+  height: 180px;
   border-radius: 1rem;
 }
 
@@ -93,12 +114,29 @@ main .inner .left_box .in_left_box .mid_menu .menu_slick {
 }
 main .inner .left_box .in_left_box .mid_menu .menu_slick .sl_box {
   padding: 15px 20px;
-  margin: 25px 25px;
+  margin: 10px 25px 0;
 }
 main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-list {
   padding: -20px -10px;
 }
-main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-arrow {
+main .inner .left_box .in_left_box #prev_v2 {
+  position: absolute;
+  top: 87%;
+  left: 20px;
+  z-index: 999;
+  border: none;
+  background: inherit;
+}
+main .inner .left_box .in_left_box #next_v2 {
+  position: absolute;
+  top: 87%;
+  right: 20px;
+  z-index: 999;
+  border: none;
+  background: inherit;
+}
+/* 기본 슬릭설정 */
+/* main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-arrow {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -123,8 +161,37 @@ main .inner .left_box .in_left_box .mid_menu .menu_slick .slick-next {
 
   background: url(../img/arrw-nxt-b.png) no-repeat center;
   border: none;
+} */
+main .inner .left_box .in_left_box .footer_menu {
+  width: 750px;
+  margin-left: 30px;
+  overflow: hidden;
+  position: relative;
 }
-
+main .inner .left_box .in_left_box .footer_menu .intro_slick .intro_box {
+  background: #ddd;
+  border-radius: 1rem;
+  height: 130px;
+}
+main .inner .left_box .in_left_box .footer_menu .intro_slick .intro_inner_box {
+  background: #fff;
+  height: 100px;
+  border-radius: 1rem;
+}
+main .inner .left_box .in_left_box .footer_menu .intro_slick img {
+  width: 100%;
+  height: 100%;
+}
+main .inner .left_box .in_left_box .footer_menu .intro_slick {
+  position: relative;
+}
+main .inner .left_box .in_left_box .footer_menu .intro_slick .intro_box {
+  padding: 15px 20px;
+  margin: 25px 25px;
+}
+main .inner .left_box .in_left_box .footer_menu .intro_slick .slick-list {
+  padding: -20px -10px;
+}
 /* left_box */
 /* right_box */
 main .inner .right_box {
