--- a/css/main.css
+++ b/css/main.css
@@ -71,18 +71,21 @@ main .inner .left_box .top_menu img {
 main .inner .left_box .in_left_box {
   position: relative;
 }
+.mid_box {
+  position: relative;
+}
 main .inner .left_box .in_left_box #prev {
   position: absolute;
-  top: 60%;
-  left: 20px;
+  top: 45%;
+  left: 0;
   z-index: 999;
   border: none;
   background: inherit;
 }
 main .inner .left_box .in_left_box #next {
   position: absolute;
-  top: 60%;
-  right: 20px;
+  top: 45%;
+  right: 0;
   z-index: 999;
   border: none;
   background: inherit;
